# rule-based-particle-simulation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: code.cpp  main.cpp
